@@ -59,3 +59,7 @@ SecurePayTech Gateway (Oct 23, 2007)
 SkipJack Gateway (Nov 29, 2007)
 
 * Originally contributed by Bill Bereza - http://atomicobject.com
+
+HiTRUST Gateway (Dec 10, 2007)
+
+* Jaded Pixel
