@@ -6,6 +6,7 @@ require 'active_merchant/billing/integrations/paypal'
 require 'active_merchant/billing/integrations/nochex'
 require 'active_merchant/billing/integrations/gestpay'
 require 'active_merchant/billing/integrations/two_checkout'
+require 'active_merchant/billing/integrations/hi_trust'
 
 # make the bogus gateway be classified correctly by the inflector
 Inflector.inflections do |inflect|
